setup basic spatie

--- a/laravel-web-api/composer.json
+++ b/laravel-web-api/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
+        "spatie/laravel-permission": "*",
         "tymon/jwt-auth": "^2.1"
     },
     "require-dev": {
